# forceplate-jump-analysis

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: plot.py
src/forceplate/: __init__.py  cli.py  metrics.py  parse.py
tests/: test_metrics.py
